--- a/demo/demo.html
+++ b/demo/demo.html
@@ -73,7 +73,7 @@
 
     $.ajaxSetup({cache: true});
     
-    var data = ["Chick-fil-A", "Chili's Grill & Bar", "Colgate", "General Motors", "Heinz", "Hyundai", "Toyota", "Walmart", "Wendy's"];
+    var data = ["Chick-fil-A", "Chili's Grill & Bar", "Colgate", "General Motors", "Heinz", "Hyundai", "Toyota", "Walmart", "Wendy's", "T.J. Maxx"];
     
     function set_json_source(url) {
         $.getJSON(url).then(function (response) {
